--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swim Lessons with Sydney</title>
+    <title>Private Swim Lessons</title>
     <meta name="description" content="Affordable and professional swim lessons for all ages.">
     <meta name="keywords" content="swim lessons, swimming, private instructor">
     <meta name="author" content="Sydney Lee">
@@ -18,17 +18,22 @@
     <section>
         <h2>Why Choose My Lessons?</h2>
         <ul>
-            <li>Certified Swim Instructor</li>
-            <li>Private and Group Lessons Available</li>
-            <li>Flexible Scheduling</li>
-            <li>Beginner to Advanced Training</li>
+            <li>Group lessons at discounted rates</li>
+            <li>Referral program (refer a friend, get 50% off a lesson)</li>
+            <li>Lessons taught in a peaceful, private pool</li>
+            <li>Classes for all ages (3-60+)</li>
+            <li>Flexible scheduling to fit your needs</li>
+            <li>Cancel anytime, no hassel</li>
+            <li>Conveniently located in the Ranch at Brushy Creek, Cedar Park</li>
         </ul>
     </section>
+        <h2>Pricing</h2>
+            
 
     <section>
         <h2>Contact Information</h2>
-        <p>Email: <a href="mailto:sydney@example.com">sydney@example.com</a></p>
-        <p>Phone: (123) 456-7890</p>
+        <p>Email: <a href="mailto:sydney.r.lee04@gmail.com">sydney.r.lee04@gmail.com</a></p>
+        <p>Phone: (701)-541-7362</p>
     </section>
 
     <footer>
