--- a/about.html
+++ b/about.html
@@ -12,7 +12,10 @@
         <a href="index.html">Back to Home</a>
     </header>
     <section>
-        <p>I believe that swimming is for everyone! Whether you're looking for individual attention or prefer a group setting, I provide lessons designed to meet your needs and goals.</p>
+        <p>Hi, I’m Sydney! I’m a math major at the University of Texas at Austin with a passion for teaching and problem-solving. 
+            I’ve been offering swim lessons for over five years, and I absolutely love helping people of all ages improve their swimming skills. 
+            Whether you're a beginner or looking to refine your strokes, my approach combines clear instruction with patience and a personal touch. 
+            I believe that learning to swim should be both fun and empowering, and I’m excited to guide you every step of the way as you achieve your goals!</p>
     </section>
 </body>
 </html>
