--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header id="business-title">
+    <header id="titlePage">
         <h1>Private Swim Lessons</h1>
         <p id="slogan">Dive in, Swim Strong, Learn for Life!</p>
         <nav>
