add google form

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Private Swim Lessons</h1>
+        <h1>RBC Private Swim Lessons</h1>
         <p id="slogan">Dive in, Swim Strong, Learn for Life!</p>
     </header>
 
@@ -51,6 +51,13 @@
             </tbody>
         </table>
         <p>Payments are through Venmo after each individual lesson.</p>
+    </section>
+
+    <section id="schedule">
+        <h2>Want to schedule a lesson?</h2>
+        <li>Register for a single class here</li>
+        <li>To schedule recurring lessons, use the form below:</li>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScD7Iun2UzjLyjj7JbQollwCUyG79Nn3f4vCuN3mQf9Tkxikw/viewform?embedded=true" width="640" height="1343" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </section>
 
     <section id="about-me">
