container for pricing/scheduling, adjust table format, remove form from page, edit schedule links

--- a/index.html
+++ b/index.html
@@ -26,43 +26,47 @@
         </ul>
     </section>
 
-    <section id="pricing">
-        <h2>Pricing</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Lesson</th>
-                    <th>Price</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Private</td>
-                    <td>$40 per lesson</td>
-                </tr>
-                <tr>
-                    <td>Semi-Private (2 People)</td>
-                    <td>Total: $50 ($25 per person)</td>
-                </tr>
-                <tr>
-                    <td>Group (3 People)</td>
-                    <td>Total: $60 ($20 per person)</td>
-                </tr>
-            </tbody>
-        </table>
-        <p>Payments are through Venmo after each individual lesson.</p>
-    </section>
+    <div id ="container1>
+        <section id="pricing">
+            <h2>Pricing</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Lesson</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Private</td>
+                        <td>$40 per lesson</td>
+                    </tr>
+                    <tr>
+                        <td>Semi-Private (2 People)</td>
+                        <td>Total: $50 ($25 per person)</td>
+                    </tr>
+                    <tr>
+                        <td>Group (3 People)</td>
+                        <td>Total: $60 ($20 per person)</td>
+                    </tr>
+                </tbody>
+            </table>
+            <p>Payments are through Venmo after each individual lesson.</p>
+        </section>
 
-    <section id="schedule">
-        <h2>Want to schedule a lesson?</h2>
-        <li>Register for a single class here</li>
-        <li>To schedule recurring lessons, use the form below:</li>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScD7Iun2UzjLyjj7JbQollwCUyG79Nn3f4vCuN3mQf9Tkxikw/viewform?embedded=true" width="640" height="1343" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    </section>
+        <section id="schedule">
+            <h2>Want to schedule a lesson?</h2>
+            <li>Register for a single class <a href="https://the-ranch-at-brushy-creek.square.site">here</a> </li>
+            <li>Register for weekly lessons <a href= "https://docs.google.com/forms/d/e/1FAIpQLScD7Iun2UzjLyjj7JbQollwCUyG79Nn3f4vCuN3mQf9Tkxikw/viewform?usp=dialog">here </a>> </li>
+        </section>
+        
+    </div>
+
+        
 
     <section id="about-me">
         <h2>About Me</h2>
-        <p>Hi, I’m Sydney! I’m a math major at the University of Texas at Austin with a passion for teaching and problem-solving. 
+        <p id="biography">Hi, I’m Sydney! I’m a math major at the University of Texas at Austin with a passion for teaching and problem-solving. 
             I’ve been offering swim lessons for over five years, and I absolutely love helping people of all ages improve their swimming skills. 
             Whether you're a beginner or looking to refine your strokes, my approach combines clear instruction with patience and a personal touch. 
             I believe that learning to swim should be both fun and empowering, and I’m excited to guide you every step of the way as you achieve your goals!</p>
