--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                     </tr>
                 </tbody>
             </table>
-            <p>Payments are through Venmo after each individual lesson.</p>
         </section>
 
         <section id="schedule">
             <h2>Want to schedule a lesson?</h2>
             <li>Register for a single class <a href="https://the-ranch-at-brushy-creek.square.site">here</a> </li>
-            <li>Register for weekly lessons <a href= "https://docs.google.com/forms/d/e/1FAIpQLScD7Iun2UzjLyjj7JbQollwCUyG79Nn3f4vCuN3mQf9Tkxikw/viewform?usp=dialog">here </a>> </li>
+            <li>Register for weekly lessons <a href= "https://docs.google.com/forms/d/e/1FAIpQLScD7Iun2UzjLyjj7JbQollwCUyG79Nn3f4vCuN3mQf9Tkxikw/viewform?usp=dialog">here </a> </li>
+            <li> I do not assemble semi-private/group lessons. For you to take a group class you must register multiple people of roughly the same swimming ability</li>
         </section>
         
     </div>
@@ -74,7 +74,8 @@
     </section>
 
     <section id="contact">
-        <h2>Contact Information</h2>
+        <h2>More questions?</h2>
+        <p><a href="https://docs.google.com/document/d/15aN1cWX_SzA0bFxVIV2u5f0JrvBxkGY-mYXqtVYWy80/edit?usp=sharing"> Frequently asked questions</a></p>
         <p>Email: <a href="mailto:sydney.r.lee04@gmail.com">sydney.r.lee04@gmail.com</a></p>
         <p>Phone: (701)-541-7362</p>
     </section>
