--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
             <h2>Want to schedule a lesson?</h2>
             <li>Register for a single class <a href="https://the-ranch-at-brushy-creek.square.site">here</a> </li>
             <li>Register for weekly lessons <a href= "https://docs.google.com/forms/d/e/1FAIpQLScD7Iun2UzjLyjj7JbQollwCUyG79Nn3f4vCuN3mQf9Tkxikw/viewform?usp=dialog">here </a> </li>
-            <li> I do not assemble semi-private/group lessons. For you to take a group class you must register multiple people of roughly the same swimming ability</li>
+            <li> Or contact me at (701)-541-7362 and I can help you register!
+            <li> I do not assemble semi-private/group lessons. <br> To take a group class you must register multiple people of roughly the same swimming ability</li>
         </section>
         
     </div>
