--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header id="titlePage">
         <h1>RBC Private Swim Lessons</h1>
         <p id="slogan">Dive in, Swim Strong, Learn for Life!</p>
     </header>
 
     <section id="benefits-of-lessons">
-        <ul>
+        <ul id="sellingPoints">
             <li>Group lessons at discounted rates</li>
             <li>Referral program</li>
             <li>Lessons taught in a peaceful, private pool</li>
