adapt image size

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li>Flexible scheduling to fit your needs</li>
             <li>Conveniently located in Cedar Park, TX</li>
         </ul>
-        <img src="coaching_backfloat.jpg" alt="instructing student">
+        <img src="coaching_backfloat.jpg" alt="instructing student" id="swimLesson">
     </section>
 
     
