Add SEO improvements and image optimization tools
- Add robots.txt and sitemap.xml for better SEO
- Add image optimization script and batch file
- Update index.html with SEO improvements
- Add .gitignore to exclude unnecessary files

--- a/index.html
+++ b/index.html
@@ -3,10 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Private Swim Lessons</title>
-    <meta name="description" content="Affordable and professional swim lessons for all ages.">
-    <meta name="keywords" content="swim lessons, swimming, private instructor">
+    <title>Ranch at Brushy Creek Private Swim Lessons | Professional Swimming Lessons in Cedar Park, TX</title>
+    <meta name="description" content="Professional private and group swim lessons in Ranch at Brushy Creek, Cedar Park, TX. Taught at my private pool by experienced instructor Sydney Lee. Serving Ranch at Brushy Creek residents and nearby areas.">
+    <meta name="keywords" content="swim lessons ranch at brushy creek, cedar park swim lessons, private pool swim lessons, ranch at brushy creek swimming lessons, sydney lee swim instructor">
     <meta name="author" content="Sydney Lee">
+    <meta name="robots" content="index, follow">
+    
+    <!-- Schema.org markup for Local Business -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "RBC Private Swim Lessons",
+      "image": "https://your-domain.com/swim_portrait.jpg",
+      "description": "Professional private swim lessons in Cedar Park, TX and Ranch at Brushy Creek.",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Cedar Park",
+        "addressRegion": "TX",
+        "postalCode": "78613",
+        "addressCountry": "US",
+        "addressLine1": "Ranch at Brushy Creek"
+      },
+      "areaServed": {
+        "@type": "GeoCircle",
+        "geoMidpoint": {
+          "@type": "GeoCoordinates",
+          "latitude": 30.5072,
+          "longitude": -97.8878
+        },
+        "geoRadius": "10"
+      },
+      "telephone": "+17015417362",
+      "email": "sydney.r.lee04@gmail.com",
+      "priceRange": "$",
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday",
+          "Sunday"
+        ],
+        "opens": "08:00",
+        "closes": "18:00"
+      }
+    }
+    </script>
+    
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,13 +68,14 @@
             <ul id="sellingPoints">
                 <li>Group lessons at discounted rates</li>
                 <li>Referral program</li>
-                <li>Lessons taught in a peaceful, private pool</li>
+                <li>Lessons taught in my private pool</li>
                 <li>Classes for all ages</li>
                 <li>Flexible scheduling to fit your needs</li>
-                <li>Conveniently located in Cedar Park, TX</li>
+                <li>Conveniently located in Ranch at Brushy Creek</li>
+                <li>Serving Ranch at Brushy Creek and nearby areas</li>
             </ul>
         </section>
-        <img src="coaching_backfloat.jpg" alt="instructing student" id="swimLesson">
+        <img src="coaching_backfloat.jpg" alt="Professional swim instructor teaching back float technique in Cedar Park, TX" id="swimLesson">
     </div>
 
     <!-- Schedule and Pricing -->
@@ -89,9 +137,9 @@
         </div>
 
         <section id="imageCollage">
-            <img src="swim_portrait.jpg" alt="Headshot of Sydney, Swim Instructor" id="instructorPortrait">   
-            <img src="tubing.jpg" alt="Water Tubing" id="tubingRiver">
-            <img src="gran_swimming.jpg" alt="Senior Citizen Swim Lessons" id="adultClass">
+            <img src="swim_portrait.jpg" alt="Professional swim instructor Sydney Lee offering lessons in Cedar Park, TX" id="instructorPortrait">   
+            <img src="tubing.jpg" alt="Water tubing adventure in Cedar Park, TX" id="tubingRiver">
+            <img src="gran_swimming.jpg" alt="Senior citizen swim lessons in Cedar Park, TX" id="adultClass">
         </section>
     </div>
 </body>
